添加主页，个人信息页，医院简介页

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,34 @@
     <string name="bottom_layout_message">消息</string>
     <string name="bottom_layout_health">健康</string>
     <string name="bottom_layout_center">个人中心</string>
+    <string name="disLogin">用户您好</string>
+    <string name="text_login">请登录</string>
+    <string name="setting_card">我的就诊卡</string>
+    <string name="setting_appoint">我的预约</string>
+    <string name="setting_about">关于</string>
+    <string name="setting_recommend">推荐好友</string>
+    <string name="main_detail">医院简介</string>
+    <string name="main_professor">专家医师</string>
+    <string name="main_guide">医院导航</string>
+    <string name="main_registrate_day">当日挂号</string>
+    <string name="main_registrate_day_detail">快速挂当日号</string>
+    <string name="main_registrate_recommend">预约挂号</string>
+    <string name="main_registrate_recommend_detail">预约未来7天号源</string>
+    <string name="main_physical">体检中心</string>
+    <string name="main_report">查看报告单</string>
+    <string name="main_cost">住院费用</string>
+    <string name="main_office">科室一览</string>
+    <string name="main_handbook">服务指南</string>
+    <string name="main_question">健康质询</string>
+    <string name="hosipital_detail_short">河南省长垣县博爱路南段8号 邮编：453400</string>
+    <string name="hosipital_detail_hotline">健康热线</string>
+    <string name="hosipital_detail_text_hotline">037_8882618</string>
+    <string name="hosipital_detail_fax">传真</string>
+    <string name="hosipital_detail_email">电子邮件</string>
+    <string name="hosipital_detail_website">官网</string>
+    <string name="hosipital_detail_text_website">http://www.honlivhp.com</string>
+    <string name="hosipital_detail_text_email">honliv.com</string>
+    <string name="hosipital_detail_text_fax">0337-55555</string>
+    <string name="hosipital_detail_detail">医院简介</string>
+    <string name="hosipital_detail_text_detail">hahahahhahahahah</string>
 </resources>
