添加医师选择页

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,10 +40,47 @@
     <string name="hosipital_guide_guide_map">地图导航</string>
     <string name="hosipital_guide_local">周边商户</string>
     <string name="office_select">选择科室</string>
-    <string name="text_cellphone">手机号</string>
+    <string name="text_cellphone">手 机</string>
     <string name="hint_cellphone">请输入手机号</string>
     <string name="hint_password">请输入密码</string>
     <string name="text_password">密码</string>
     <string name="login">登录</string>
     <string name="register">注册</string>
+    <string name="original_pwd">原始密码</string>
+    <string name="hint_original_pwd">请输入原始密码</string>
+    <string name="alert_pwd">*密码只能包含数字，英文字母，并且至少包含6位</string>
+    <string name="hint_new_pwd">请输入新密码</string>
+    <string name="new_pwd">新密码</string>
+    <string name="hint_sure_pwd">确认密码</string>
+    <string name="sure_pwd">确认密码</string>
+    <string name="sure_change">确认修改</string>
+    <string name="text_complete_imfo">完善个人信息</string>
+    <string name="alert_remind">温馨提示</string>
+    <string name="alert_remind_detail">1.个人信息必须与您在我院挂号窗口下的信息保持一致，否则不能实现挂号预约，报告查询功能。2.基本信息30天内只能修改一次，请认真填写</string>
+    <string name="text_name">姓名</string>
+    <string name="hint_name">请输入姓名</string>
+    <string name="text_idcard">身份证</string>
+    <string name="hint_idcard">请输入身份证</string>
+    <string name="text_add_card">添加就诊卡</string>
+    <string name="text_card_number">就诊卡号</string>
+    <string name="hint_card_number">持卡人就诊卡号</string>
+    <string name="hint_card_idcard">持卡人身份证号码</string>
+    <string name="text_add">添加</string>
+    <string name="setting_base_info">基本信息</string>
+    <string name="setting_change_pwd">修改密码</string>
+    <string name="setting_book">我的预约</string>
+    <string name="setting_logout">注销登录</string>
+    <string name="alert_remind_register">1.请使用院内登记的手机号码注册2.完善更多信息，享受更多服务</string>
+    <string name="title_register">手机号码注册</string>
+    <string name="text_pwd">密码</string>
+    <string name="hint_pwd">密码</string>
+    <string name="alert_note">请输入短信验证码，如在规定时间内没有收到验证码请重新发送短信验证码验证。</string>
+    <string name="text_note">短信码</string>
+    <string name="hint_note">请输入收到的短信验证码</string>
+    <string name="sofeware_protocol">软件许可及服务协议</string>
+    <string name="text_book_log">预约记录</string>
+    <string name="text_book_office">预约科室</string>
+    <string name="text_book_doctor">预约医生</string>
+    <string name="text_book_time">预约时间</string>
+    <string name="text_book_number">预约序号</string>
 </resources>
