--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,4 +83,5 @@
     <string name="text_book_doctor">预约医生</string>
     <string name="text_book_time">预约时间</string>
     <string name="text_book_number">预约序号</string>
+    <string name="text_send_note">发送验证码</string>
 </resources>
