踢出原来弹出框

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">宏力商城</string>
+    <string name="app_name">A生活商城</string>
     <string name="bottom_layout_main">主页</string>
     <string name="bottom_layout_message">消息</string>
     <string name="bottom_layout_health">健康</string>
