--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -163,4 +163,5 @@
     <string name="bottom_layout_shopping">购物车</string>
     <string name="reLogin">登陆状态错误,请重新登录</string>
     <string name="login_error">用户名或密码错误</string>
+    <string name="order_detail">订单详情</string>
 </resources>
